Correção:
ambiquidade no pagamento
